--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,7 +42,7 @@ dependencies:
   google_fonts: ^2.3.1
   country_code_picker: ^2.0.1
   flutter_spinkit: ^5.0.0
-
+  cloud_firestore: ^3.1.17
 
 
 dev_dependencies:
